Bug 218654 - Guest VM on Xen dies due to memory leak
Summary: Guest VM on Xen dies due to memory leak
Status: RESOLVED CODE_FIX
Alias: None
Product: Virtualization
Classification: Unclassified
Component: Xen (show other bugs)
Hardware: Intel Linux
: P3 normal
Assignee: virtualization_xen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-28 13:00 UTC by Leonidas Spyropoulos
Modified: 2024-03-29 01:29 UTC (History)
4 users (show)

See Also:
Kernel Version: 6.8.2
Subsystem:
Regression: Yes
Bisected commit-id: 6c5aa6fc4def


Attachments
kernel logs (914.69 KB, text/plain)
2024-03-28 13:00 UTC, Leonidas Spyropoulos
Details

Description Leonidas Spyropoulos 2024-03-28 13:00:53 UTC
Created attachment 306054 [details]
kernel logs

Guest VM which runs 6.8.x kernel on Xen hosts leads to system unstable, kernel ring buffer flooded with "BUG: Bad page state in process <process>"

Full logs attached


Reverting to 6.7.9 solves it.


Similar reports [1] [2]


[1]: https://bbs.archlinux.org/viewtopic.php?pid=2160294
[2]: https://bugs.launchpad.net/ubuntu/+source/linux/+bug/2056706
Comment 1 Jakub Kicinski 2024-03-28 15:23:19 UTC
Fix is on the list:
https://lore.kernel.org/all/171154167446.2671062.9127105384591237363.stgit@firesoul/
Should be fixed in 6.9-rc3 and subsequent stable releases.
Comment 2 Leonidas Spyropoulos 2024-03-28 18:49:27 UTC
Thank you - feel free to close this.
Comment 3 Jakub Kicinski 2024-03-29 01:29:47 UTC
Now commit 037965402a01 ("xen-netfront: Add missing skb_mark_for_recycle") in netdev/net, on its way to -rc3.

Note You need to log in before you can comment on or make changes to this bug.