xen-netfront: Add missing skb_mark_for_recycle

Source: https://git.kernel.org/
MR: 204367
Type: Security Fix
Disposition: Backport from v5.15.154~72
ChangeID: 4143b9479caa29bb2380f3620dcbe16ea84eb3b1
Description:

CVE-2024-27393 kernel: xen-netfront: Add missing skb_mark_for_recycle

commit 037965402a010898d34f4e35327d22c0a95cd51f upstream.

Notice that skb_mark_for_recycle() is introduced later than fixes tag in
commit 6a5bcd84e886 ("page_pool: Allow drivers to hint on SKB recycling").

It is believed that fixes tag were missing a call to page_pool_release_page()
between v5.9 to v5.14, after which is should have used skb_mark_for_recycle().
Since v6.6 the call page_pool_release_page() were removed (in
commit 535b9c61bdef ("net: page_pool: hide page_pool_release_page()")
and remaining callers converted (in commit 6bfef2ec0172 ("Merge branch
'net-page_pool-remove-page_pool_release_page'")).

This leak became visible in v6.8 via commit dba1b8a7ab68 ("mm/page_pool: catch
page_pool memory leaks").

Cc: stable@vger.kernel.org
Fixes: 6c5aa6fc4def ("xen networking: add basic XDP support for xen-netfront")
Reported-by: Leonidas Spyropoulos <artafinde@archlinux.com>
Link: https://bugzilla.kernel.org/show_bug.cgi?id=218654
Reported-by: Arthur Borsboom <arthurborsboom@gmail.com>
Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>
Link: https://lore.kernel.org/r/171154167446.2671062.9127105384591237363.stgit@firesoul
Signed-off-by: Jakub Kicinski <kuba@kernel.org>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

[The helper function skb_mark_for_recycle() does not exist in the 5.10
 kernel tree. As noted in the upstream commit description, the correct
 call to fix this memory leak in kernels v5.9 through v5.14 is page_pool_release_page().
 Modified the backport to use page_pool_release_page(queue->page_pool, page)
 instead to resolve the implicit declaration build error]

Signed-off-by: E V Ravi <reluri@mvista.com>
Signed-off-by: Corey Minyard <cminyard@mvista.com>